--- a/src/style/sass/Components/_animationsButton.scss
+++ b/src/style/sass/Components/_animationsButton.scss
@@ -81,3 +81,6 @@ body:not(.contrast) .animations-toggle-button {
         text-shadow: 0px 2px 4px map-get($colors,red);
     }
 }
+body.contrast .animations-toggle-button {
+    border-color: map-get($colors,darkBackground);
+}
