--- a/src/style/sass/main.css
+++ b/src/style/sass/main.css
@@ -249,6 +249,10 @@ body:not(.contrast) .animations-toggle-button_off {
   text-shadow: 0px 2px 4px hsl(0, 95%, 55%);
 }
 
+body.contrast .animations-toggle-button {
+  border-color: hsl(0, 6%, 10%);
+}
+
 .switch-container {
   display: flex;
   align-items: center;
